--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - /bin/sh
       - -c
       - |
+        while ! nc -z db 5432; do sleep 1; done;
         python manage.py migrate
         python manage.py runserver 0.0.0.0:8000
     volumes:
@@ -31,3 +32,4 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_DB: ${POSTGRES_DB}
+      DB_HOST: ${DB_HOST}
